--- a/src/components/flight-search/flight-search.component.html
+++ b/src/components/flight-search/flight-search.component.html
@@ -1,2 +1,4 @@
 <date-wrapper on-dates-set="$ctrl.setDatesHandler(startDate, endDate)"></date-wrapper>
-<airport-wrapper ng-if="$ctrl.startDate && $ctrl.endDate" airports="$ctrl.airports" on-airports-set="$ctrl.setAirportsHandler(startAirport, endAirport)"></airport-wrapper>
+<airport-wrapper airports="$ctrl.airports" on-airports-set="$ctrl.setAirportsHandler(startAirport, endAirport)"></airport-wrapper>
+<!-- <airport-wrapper ng-if="$ctrl.startDate && $ctrl.endDate" airports="$ctrl.airports" on-airports-set="$ctrl.setAirportsHandler(startAirport, endAirport)"></airport-wrapper> -->
+<button class="button is-yellow" ng-click="$ctrl.searchFlights()">Search</button>
