--- a/src/scss/overrides/form.scss
+++ b/src/scss/overrides/form.scss
@@ -3,17 +3,17 @@
 .button {
   font-weight: 700;
 
-  &.is-yellow {
-  background-color: $ryanair-yellow;
-  border-color: transparent;
-  color: $ryanair-blue;
+//   &.is-yellow {
+//   background-color: $ryanair-yellow;
+//   border-color: transparent;
+//   color: $ryanair-blue;
 
-  &:hover {
-    background-color: darken($ryanair-yellow, 10%) ;
-    border-color: transparent;
-    color: darken($ryanair-blue, 10%);
-  }
-}
+//   &:hover {
+//     background-color: darken($ryanair-yellow, 10%) ;
+//     border-color: transparent;
+//     color: darken($ryanair-blue, 10%);
+//   }
+// }
 }
 
 .input[type='date'] {
