--- a/src/components/flight-search/flight-search.component.html
+++ b/src/components/flight-search/flight-search.component.html
@@ -1,4 +1,3 @@
 <date-wrapper on-dates-set="$ctrl.setDatesHandler(startDate, endDate)"></date-wrapper>
-<airport-wrapper airports="$ctrl.airports" on-airports-set="$ctrl.setAirportsHandler(startAirport, endAirport)"></airport-wrapper>
-<!-- <airport-wrapper ng-if="$ctrl.startDate && $ctrl.endDate" airports="$ctrl.airports" on-airports-set="$ctrl.setAirportsHandler(startAirport, endAirport)"></airport-wrapper> -->
-<button class="button is-yellow" ng-click="$ctrl.searchFlights()">Search</button>
+<airport-wrapper ng-if="$ctrl.startDate && $ctrl.endDate" airports="$ctrl.airports" on-airports-set="$ctrl.setAirportsHandler(startAirport, endAirport)"></airport-wrapper>
+<button class="button is-warning" ng-click="$ctrl.searchFlights()">Search</button>
