--- a/src/components/date-selector/date-selector.component.html
+++ b/src/components/date-selector/date-selector.component.html
@@ -1,2 +1,2 @@
-<input class="input is-medium" type="date" min="{{$ctrl.minDate}}" max="{{$ctrl.maxDate}}" ng-model="date" ng-change="$ctrl.onDateChange({date})"
+<input class="input" type="date" min="{{$ctrl.minDate}}" max="{{$ctrl.maxDate}}" ng-model="date" ng-change="$ctrl.onDateChange({date})"
 />
