--- a/src/components/date-wrapper/date-wrapper.component.html
+++ b/src/components/date-wrapper/date-wrapper.component.html
@@ -1,16 +1,10 @@
-<div class="columns">
-  <div class="column is-3 is-offset-3">
-    <div class="field has-addons">
-      <div class="control">
-        <p class="help has-text-white">Fly out</p>
-        <date-selector on-date-change="$ctrl.startDateChanged(date)" max-date="$ctrl.maxDate">
-        </date-selector>
-      </div>
-      <div class="control">
-        <p class="help has-text-white">Fly back</p>
-        <date-selector on-date-change="$ctrl.endDateChanged(date)" min-date="$ctrl.minDate">
-        </date-selector>
-      </div>
-    </div>
+<div class="field has-addons">
+  <div class="control">
+    <p class="help has-text-white is-size-6">Fly out:</p>
+    <date-selector on-date-change="$ctrl.startDateChanged(date)" max-date="$ctrl.maxDate"> </date-selector>
+  </div>
+  <div class="control">
+    <p class="help has-text-white is-size-6">Fly back:</p>
+    <date-selector on-date-change="$ctrl.endDateChanged(date)" min-date="$ctrl.minDate"> </date-selector>
   </div>
 </div>
