--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -17,5 +17,5 @@
 </section>
 
 <section class="section flights">
-  <ui-view> </ui-view>
+  <ui-view airports="$ctrl.airports"> </ui-view>
 </section>
