--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,4 +5,4 @@ $info: $ryanair-light-blue;
 $warning: $ryanair-yellow;
 
 @import '~bulma/bulma.sass';
-@import './overrides/overrides.scss'
+@import './overrides/overrides.scss';
