--- a/src/components/date-wrapper/date-wrapper.component.html
+++ b/src/components/date-wrapper/date-wrapper.component.html
@@ -1,10 +1,10 @@
 <div class="field has-addons">
   <div class="control">
     <p class="help has-text-white is-size-6">Fly out:</p>
-    <date-selector on-date-change="$ctrl.startDateChanged(date)" max-date="$ctrl.maxDate"> </date-selector>
+    <date-selector on-date-change="$ctrl.startDateChanged(date)" max-date="$ctrl.maxDate" init-date="$ctrl.initStartDate"></date-selector>
   </div>
   <div class="control">
     <p class="help has-text-white is-size-6">Fly back:</p>
-    <date-selector on-date-change="$ctrl.endDateChanged(date)" min-date="$ctrl.minDate"> </date-selector>
+    <date-selector on-date-change="$ctrl.endDateChanged(date)" min-date="$ctrl.minDate" init-date="$ctrl.initEndDate"> </date-selector>
   </div>
 </div>
