--- a/src/flight-list/flight-list.component.html
+++ b/src/flight-list/flight-list.component.html
@@ -6,9 +6,9 @@
   <div class="columns is-mobile is-centered is-vcentered">
     <div class="column is-narrow">
       <h2 class="title">
-        {{$ctrl.startAirport.name}}
+        {{ $ctrl.startAirport.name }}
       </h2>
-      <h2 class="subtitle"> {{$ctrl.startAirport.country.name}} </h2>
+      <h2 class="subtitle"> {{ $ctrl.startAirport.country.name }} </h2>
     </div>
     <div class="column is-narrow">
       <h2 class="title is-1">
@@ -17,15 +17,15 @@
     </div>
     <div class="column is-narrow">
       <h2 class="title">
-        {{$ctrl.endAirport.name}}
+        {{ $ctrl.endAirport.name }}
       </h2>
-      <h2 class="subtitle"> {{$ctrl.endAirport.country.name}} </h2>
+      <h2 class="subtitle"> {{ $ctrl.endAirport.country.name }} </h2>
     </div>
   </div>
 
   <div class="columns is-mobile is-centered is-vcentered">
-    <div class="column is-narrow">
-      <table class="table">
+    <div class="column is-8">
+      <table class="table is-hoverable is-striped is-fullwidth">
         <thead>
           <tr>
             <th> Fly out </th>
@@ -35,9 +35,9 @@
         </thead>
         <tbody>
           <tr ng-repeat="flight in ::$ctrl.flights">
-            <td>{{flight.dateFrom | date: $ctrl.displayDateFormat}}</td>
-            <td>{{flight.dateTo| date: $ctrl.displayDateFormat}}</td>
-            <td>{{flight.price | currency: flight.currency }}</td>
+            <td> {{ flight.dateFrom | date: $ctrl.displayDateFormat }} </td>
+            <td> {{ flight.dateTo | date: $ctrl.displayDateFormat }} </td>
+            <td> {{ flight.price | currency: flight.currency }} </td>
           </tr>
         </tbody>
       </table>
