--- a/src/components/flight-search/flight-search.component.html
+++ b/src/components/flight-search/flight-search.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="column is-narrow is-4">
-    <airport-wrapper airports="$ctrl.airports" on-airports-set="$ctrl.setAirportsHandler(startAirport, endAirport)"></airport-wrapper>
+    <airport-wrapper airports="$ctrl.airports" routes="$ctrl.routes" on-airports-set="$ctrl.setAirportsHandler(startAirport, endAirport)"></airport-wrapper>
   </div>
 
   <div class="column button-column is-narrow is-1">
