--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -10,9 +10,9 @@
   </div>
 </div>
 
-<section class="section search">
-  <div class="container has-background-info">
-    <flight-search airports="$ctrl.airports"></flight-search>
+<section class="section">
+  <div class="container search-container has-background-info">
+    <flight-search airports="$ctrl.airports" routes="$ctrl.routes"></flight-search>
   </div>
 </section>
 
